# MasterX_System

./: .gitignore  README.md
cmd/: CMakeLists.txt  Makefile.em  Makefile_HTML.em  README.md  build_release.mxcmd  libcmdConfig.cmake.in  libmxcmdConfig.cmake.in
cmd/console_shader_generator/: CMakeLists.txt  Makefile  gencode.console.cpp  mx2-ollama.cpp  mx2-ollama.hpp
cmd/data/shaders/: atan.glsl  color-cycle.glsl  color-f2.glsl  color-shift.glsl  color-swirl.glsl  cyclone.glsl  default.glsl  distort.glsl  fractal.glsl  geometric.glsl  huri.glsl  ripple.glsl  vhs.glsl
cmd/guide/: .cmd_history  code.html  commands.html  control_flow.html  expressions.html  index.html  style.css
cmd/include/: ast.hpp  cmd_argz.hpp  command.hpp  command_reg.hpp  game_state.hpp  html.hpp  library.hpp  parser.hpp  string_buffer.hpp  types.hpp  version_info.hpp
cmd/modules/args/: Makefile  Makefile.win  mod.cpp
cmd/modules/ex1/: Makefile  Makefile.win  mod.cpp
cmd/modules/sdl/: CMakeLists.txt  bounce.mxcmd  draw.mxcmd  grid.mxcmd  pong.mxcmd  prog.mxcmd  puzzle.mxcmd  random_blocks.mxcmd  random_circle_color.mxcmd  sdl-module.cpp  sdl-script.mxcmd  skeleton.mxcmd  snow.mxcmd  space.mxcmd
cmd/ollama_gen/: CMakeLists.txt  mx2-ollama.cpp  mx2-ollama.hpp
cmd/scripts/: addnumbers.mxcmd  def.mxcmd  error.mxcmd  extract.mxcmd  index.mxcmd  loop.mxcmd  mingw-deploy.mxcmd  strcmp.mxcmd  t.mxcmd  testall.mxcmd
cmd/scripts/Makefile/: Compile.mxcmd  Makefile  Makefile.mxcmd  main.c  test.c
cmd/site/: index.html
cmd/src/: ast.cpp  ast.d  cmd.cpp  command.cpp  command.d  command_reg.cpp  command_reg.d  console_full.cpp  html.cpp  html.d  page.cpp  scanner.cpp  scanner.d  string_buffer.cpp  string_buffer.d  types.cpp  types.d
compiler/: CMakeLists.txt  Config.cmake.in  Makefile  Makefile.em  README.md  cmake_uninstall.cmake.in  export.cpp  html.cpp  index.html  main.cpp  scan_cxx-config.cmake  scanner.cpp  scanner.hpp  string_buffer.hpp  types.cpp  types.hpp
compiler/ETL/: CMakeLists.txt  Makefile.em  README.md  ast.hpp  clib.hpp  codegen.hpp  debug.cpp  embed_func.cpp  embed_func.hpp  etl  etl-i  etl-lib.txt  exec.cpp  export.cpp  interp.cpp  interp.hpp  ir.cpp  ir.hpp  ir_opt.hpp  main.cpp  parser.cpp  parser.hpp  symbol.hpp  test.cpp  version_info.hpp
compiler/ETL/etl_test_code/: README.md  projects.sh  run_code.sh  run_valgrind.sh  test_code.sh
compiler/ETL/etl_test_code/addnumber/: 2  Makefile  add.e  add.i  add.s  asm.s  inc.i  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/bitwise/: Makefile  bit.e  bit.i  bit.s  program
compiler/ETL/etl_test_code/c_code/: 2  Makefile  code.c  hello.e  hello.i  hello.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/compare/: Makefile  cmp.e  cmp.i  cmp.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/cpp_code/: Makefile  code.cpp  hello.e  hello.i  hello.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/draw_image/: Makefile  image.e  image.i  image.s  sdl.c
compiler/ETL/etl_test_code/hello/: Makefile  asm.s  hello.e  hello.i  hello.s  inc.i  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/length/: Makefile  length.e  length.i  length.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/logical/: Makefile  l.e  l.i  l.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/macros/: Makefile  macros.e  macros.i  macros.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/masterpiece/: Makefile  piece.e  piece.i  piece.s  sdl.c  sdl.e  stdout.txt
compiler/ETL/etl_test_code/memory/: Makefile  mem.e  mem.i  mem.s  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/number/: 2  Makefile  asm.s  inc.i  number.e  number.i  number.s  program  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/piece/: Makefile  piece.e  piece.i  piece.s  sdl.e
compiler/ETL/etl_test_code/pong/: Makefile  pong.e  pong.i  pong.s  sdl.c
compiler/ETL/etl_test_code/printtext/: Makefile  sdl.c  sdl.e  text.e  text.i  text.s
compiler/ETL/etl_test_code/random_squares/: Makefile  sdl.c  sdl.e  square.e  square.i  square.s
compiler/ETL/etl_test_code/read/: Makefile  read.e  stdout.txt  valgrind.txt
compiler/ETL/etl_test_code/str/: stdout.txt  string.e  string.i  string.s  valgrind.txt
compiler/ETL/etl_test_code/strings/: Makefile  stdout.txt  string.e  string.i  string.s  valgrind.txt
compiler/ETL/etl_test_code/tictactoe/: Makefile  sdl.c  sdl.e  tictactoe.e  tictactoe.i  tictactoe.s
compiler/ETL/etl_test_code/while/: Makefile  loop.e  loop.i  loop.s  stdout.txt  valgrind.txt
compiler/ETL/example/: README.md
compiler/ETL/example/3card/: Makefile  card.e
compiler/ETL/example/breakout/: Makefile  README.md  breakout.e
compiler/ETL/example/hello_world/: Makefile  hello.e
compiler/ETL/example/hello_world_gui/: Makefile  hello.e
compiler/ETL/example/masterpiece/: Makefile  README.md  piece.e
compiler/ETL/example/pong/: Makefile  pong.e
compiler/ETL/example/tictactoe/: Makefile  tictactoe.e
compiler/ETL/libetl/: CMakeLists.txt  Makefile  README.md  etl.e  io.c  io.e  libetl.c  sdl.c  sdl.e
compiler/ETL/libetl/shared/: etl.hpp
compiler/testprog/: CMakeLists.txt  main.cpp
system/: CMakeLists.txt  Makefile.em  README.md
system/assets/: mx.cfg
system/assets/scripts/: break_continue.mxcmd  count_all.mxcmd  elif.mxcmd  for.mxcmd  rename.mxcmd  stamps.bsd.mxcmd  stamps.mxcmd  sub.mxcmd  test.mxcmd  validate_email.mxcmd  validate_ip.mxcmd  validate_url.mxcmd
system/src/: argz.hpp  asteroid_window.cpp  asteroid_window.d  asteroid_window.hpp  cfg.cpp  cfg.d  cfg.hpp  dimension.cpp  dimension.d  dimension.hpp  loadpng.cpp  loadpng.d  loadpng.hpp  main.cpp  main.d  masterpiece.cpp  masterpiece.d  masterpiece.hpp  matrix.cpp  matrix.d  matrix.hpp  messagebox.cpp  messagebox.d  messagebox.hpp  mx_abstract_control.hpp  mx_controls.cpp  mx_controls.d  mx_controls.hpp  mx_event.cpp  mx_event.d  mx_event.hpp  mx_menu.cpp  mx_menu.d  mx_menu.hpp  mx_system_bar.cpp  mx_system_bar.d  mx_system_bar.hpp  mx_window.cpp  mx_window.d  mx_window.hpp  (+19 more)
system/src/apps/ats/: Makefile  ats.h  ats_export.cpp  code.cpp  (+39 more)
(+10 files in other folders)
